fix: tariff objects follow jpa conventions
CRUD now returns dtos and service correctly uses those objects to help update repo and return for frontend use